# Terrygon

./: .gitignore  Dockerfile  LICENSE  README.md  backup.sh  config.toml.example  config.yml.example  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  schema.sql  schema.sql.example  terrygon.py  terrygon.service  terrygon.service.example
addons/: approval.py  block.py  botowner.py  events.py  misc.py  mod.py  setup.py  trusted.py  warn.py
backup-configs/: terrygon_backup.service  terrygon_backup.timer
cogs/: accountinfo.py  colors.py  custom.py  filter.py  memes.py  qrgen.py  toggleroles.py
data/: schema.sql
migration/: migrate.py
modules/: accountinfo.py  approval.py  block.py  botowner.py  colors.py  events.py  filter.py  memes.py  misc.py  mod.py  qrgen.py  settings.py  toggleroles.py  trusted.py  warn.py
utils/: checks.py  common.py  custom_views.py  errors.py  help.py  logger.py  paginator.py  scheduler.py  self_roles.py
