[project]
name = "Terrygon"
version = ""
description = "A General Purpose Discord Bot"
authors = [
    {name = "PhazonicRidley", email = "example@example.com"},
]
dependencies = ["setuptools", "logzero~=1.7.0", "discord.py @ git+https://github.com/Rapptz/discord.py", "asyncpg~=0.26.0", "python-Levenshtein", "fuzzywuzzy~=0.18.0", "tabulate~=0.8.10", "pylast", "qrcode~=7.3.1", "pillow~=9.2.0", "aiohttp", "discord-ext-menus @ git+https://github.com/Rapptz/discord-ext-menus", "webcolors~=1.12", "jishaku", "alt-discord-flags", "toml~=0.10.2"]
requires-python = ">=3.10"
license = {text = "GPL-3.0"}

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"


[tool]
[tool.pdm]
